--- a/_posts/2019-08-17-galicia.md
+++ b/_posts/2019-08-17-galicia.md
@@ -16,7 +16,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
     * the city is well-groomed
   * evening bike ride to the fields east of the initial deployment is hindered
     by losing our way and eventually a flat tire
-  * cummulative plan completion: 50%
+  * cumulative plan completion: 50%
 
 ### Day 02 (2019-08-12)
 
@@ -32,7 +32,10 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
   * late afternoon kvass in a café in Berehovo
   * first encounter with proper Ukranian roads and cowboys
   * I have mineral crisis and cannot continue due to cramps
-  * cummulative plan completion: 75%
+  * cumulative plan completion: 75%
+
+{:.thumbnail}
+[![Webs on the road](/resources/2019-galicia/webs.jpg)](/resources/2019-galicia/webs.jpg)
 
 ### Day 03 (2019-08-13)
 
@@ -44,17 +47,26 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
     * Anglophone girl, almost Czechophone security guy
     * there were more women than men in the streets around noon
   * afternoon kvass at Shenborniv castle (Шенборнів) with nice surroundnings
+  * (women) monastery near Svalyava (Кирило-Мефодіївський монастир)
   * riding through villages triggers curiosity among the locals, we obtained water
     even when house owners did not understand us, [their consent was
     unclear](https://en.wikipedia.org/wiki/List_of_films_featuring_home_invasions)
-  * cummulative plan completion: 72%
+  * cumulative plan completion: 72%
+
+{:.thumbnail}
+[![Paved roads](/resources/2019-galicia/roads.jpg)](/resources/2019-galicia/roads.jpg)
 
 ### Day 04 (2019-08-14)
 
   * **daily stats:** 83 km
   * **sleeping:** hotel+disco Kolochava (Колочава), 200 UAH/person/night
   * breakfast in village café Kushnytsia (Кушниця)
-  * lunch in a car repair shop/pizzeria in Lypcha (Липча)
+
+{:.thumbnail}
+[![Typical village grocery + café](/resources/2019-galicia/cafe.jpg)](/resources/2019-galicia/cafe.jpg)
+
+  * again (women) monastery near Lypcha (Липча) (Монастир Різдва Пресвятої Богородиці)
+  * lunch in a car repair shop/pizzeria in Lypcha 
   * shortcut through roads/paths passable only without rain and with a jeep 
   * arriving to Kolochava (Колочава) -- the Czech Mecca in the region, of
     course there was a RJ bus parked nearby
@@ -64,7 +76,10 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
       filmmakers shooting [another
       remake](https://en.wikipedia.org/wiki/Balada_pro_banditu))
     * partying in Kolochava is hard due to no/dim street lighting
-  * cummulative plan completion: 68%
+  * cumulative plan completion: 68%
+
+{:.thumbnail}
+[![Shortcut for jeeps](/resources/2019-galicia/shortcut1.jpg)](/resources/2019-galicia/shortcut1.jpg)
 
 ### Day 05 (2019-08-15)
 
@@ -84,7 +99,10 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
   * running out of cash, dreaming of ATMs in Vyhoda (Вигода)
   * night climb to two passes (second highest altitude of the trip, 1st was the lake)
   * surprisingly finding several (overpriced) hotels in Leopoldsdorf
-  * cummulative plan completion: NA, new plan return to Czechia
+  * cumulative plan completion: NA, new plan: return to Czechia
+
+{:.thumbnail}
+[![Climbing trees](/resources/2019-galicia/shortcut2.jpg)](/resources/2019-galicia/shortcut2.jpg)
 
 ### Day 06 (2019-08-16)
 
@@ -105,7 +123,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
     * reconstructions around the main train station
     * multiple major streets and squares
     * opera house, neogothic church
-  * cummulative new-plan completion: -20%
+  * cumulative new-plan completion: -20%
 
 ### Day 07 (2019-08-17)
 
@@ -123,45 +141,66 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
   * cycling the last kilometers to get to Przemyśl, felt such a relief being in
     the EU again
   * dinner in Kraków and night train to Prague
-  * cummulative new-plan completion: 100%
+  * cumulative new-plan completion: 100%
 
 ## People
-* gypsy children
-* cowherders
-* girl in Mukachevo
-* security guy
-* Roman -- fixing bridges in Prague after floods, Czech-speaking grandfather, does not like Russians
-* anonymous boy -- ~13 years old buys cigarettes and rides a motorbike (he's an older driver)
-* Bogdan -- yuppie from Chernovitsi
 
-## Culture
-
-## Lessons learnt
-* drinking and minerals
+* gypsy children in Berehovo -- very curious, fake waitress
+* cowherder -- talkative, even without knowing Czech
+* girl in Mukachevo -- knew good English
+* security guy -- knew a bit of Czech, liked Czechs
+* Roman -- fixing bridges in Prague after floods, Czech-speaking grandfather,
+  does not like Russians, small house with a goat under mountains now
+* anonymous boy -- ~13 years old buys cigarettes and rides a motorbike (not
+  that unusual in the region)
+* Bogdan -- yuppie from Chernovitsi, helped us in the train and Lviv,
+  enlightened
+* Poles ([2 guys, 1 girl]({%post_url 2018-12-05-tenerife %}#people)) --
+  returning from bikepacking trip from Warszava to Istanbul
 
 ## Misc
-* decentralized settlements, autonomous
-* unregulated rivers
+
+* unregulated rivers, wilder forests
+  * OTOH, more litter in the nature
 * polluted rivers
-* open bar must have loud hardbass or 90s rap playing
 * polluted air -- especially the heavy trucks are green only on the coat
 * bears smell
-* riding the roads is like an arcade game of avoid the potholes
-* Ukrainian universities participate in Erasmus
-* double time-zone
-* low effectivity
-  * shopkeeper
-  * train station
-  * grocery in Kolochava
+* open bar must have loud hardbass or 90s rap playing
+* riding the roads is like an arcade game, avoiding the potholes
+* Ukrainian universities participate in the Erasmus program
+* double time-zone (official UTC+2, effective UTC+1)
+* low efficiency
+  * shopkeeper (cannot do multitasking)
+  * train station (bureaucracy, technical breaks)
+  * grocery in Kolochava (pile of assorted goods)
+* data SIM cards are unbelievably cheap
+* decentralized settlements, self-reliant houses/villages
+* great wealth differences (even neighboring houses)
+
+{:.thumbnail}
+[![Unregulated banks of the river Rika](/resources/2019-galicia/river-rika.jpg)](/resources/2019-galicia/river-rika.jpg)
 
 ## Food
-- kvass -- beverage
-- borgas -- soup/goulash in Mukachevo
 
-practicals?
+* kvass -- beverage
+* borgas -- soup/goulash in Mukachevo
+* lots of dill (regional)
+* pelmeni, vareniky
+* colored honey/marmelade?
+* Polski bigos
 
-TODO photos
-TODO total kilometers to cycling trips
-TODO monastyr flat
-TODO monastyr on the hill
+## Lessons learnt
+
+* fenders are not worth it (hinder manipulation, bike blocks splash anyway)
+* packing all above rear wheel is suboptimal (greater moments to carry the
+  bike, overload of rear wheel/axis)
+* too many bags/luggage deteriorate leaving a bike alone
+* little backpack is useful
+* (the points above apply to lazy cyclists who do lot of for city tourism and
+  frequent public transport travels)
+* maintain not only hydration but electrolyte concentrations as well
+* no need to take both "membrane" and PVC raincoat (the former proved well)
+* sandals almost unused (cyclic shoes stunk though)
+
+*Warm thanks to T for the photos.*
 
