--- a/_posts/2019-08-17-galicia.md
+++ b/_posts/2019-08-17-galicia.md
@@ -27,7 +27,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
   * no lunch, very hot day
   * crossing the border
     * parked empty cars, smugglers have to walk
-    * poor user experince: waiting in queues under direct sunlight, armed
+    * poor user experience: waiting in queues under direct sunlight, armed
       forces around
   * late afternoon kvass in a café in Berehovo
   * first encounter with proper Ukranian roads and cowboys
@@ -41,12 +41,12 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 
   * **daily stats:** 57 km
   * **sleeping:** meadow between Rososh and Keretsky, tent
-  * learning from our hosts about non-driking water from the tap (after we
+  * learning from our hosts about non-drinking water from the tap (after we
     drank proper amount the evening before)
   * [Mukachevo](https://en.wikipedia.org/wiki/Mukachevo)
     * Anglophone girl, almost Czechophone security guy
     * there were more women than men in the streets around noon
-  * afternoon kvass at Shenborniv castle (Шенборнів) with nice surroundnings
+  * afternoon kvass at Shenborniv castle (Шенборнів) with nice surroundings
   * (women) monastery near Svalyava (Кирило-Мефодіївський монастир)
   * riding through villages triggers curiosity among the locals, we obtained water
     even when house owners did not understand us, [their consent was
@@ -70,7 +70,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
   * shortcut through roads/paths passable only without rain and with a jeep 
   * arriving to Kolochava (Колочава) -- the Czech Mecca in the region, of
     course there was a RJ bus parked nearby
-    * rainy afternoon through valleay of the Tereblia (Теребля) river
+    * rainy afternoon through valley of the Tereblia (Теребля) river
     * not as touristic as expected
     * as Czech as expected (Četnická stanice pub full of Czechs, Czech
       filmmakers shooting [another
@@ -87,7 +87,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
   * **sleeping:** hotel Leopoldsdorf, 8.3 EUR/person/night
   * breakfast in mixed good shop in Kolochava (including coffee)
   * highlight of the trip
-    * Kolochava + Nerovets under bald slopes of Karpathy mountains
+    * Kolochava + Nerovets under bald slopes of Carpathians mountains
     * valley of the Tereblia with forests around, paved road and clean air
   * lake Synevyr (Синевир)
     * disappointment -- parking lot right at the lake, "street" sellers
@@ -95,7 +95,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
     * trail in the woods, trail over fallen trunks, passing through thickets,
       guiding bike downstream
     * all of that with heavy packed bikes
-    * we all started singnig and speaking loud as we were scared from bears
+    * we all started singing and speaking loud as we were scared from bears
   * running out of cash, dreaming of ATMs in Vyhoda (Вигода)
   * night climb to two passes (second highest altitude of the trip, 1st was the lake)
   * surprisingly finding several (overpriced) hotels in Leopoldsdorf
@@ -118,8 +118,8 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
     * quick lunch in hipster burger-ama
     * the second encounter with Ukrainian public transport (almost were not allowed
       to board with the bikes)
-  * troubles finding a hostel ad-hoc, quick sightseeing while looking for accomodation
-    * very crowded even in the evening, European appereance
+  * troubles finding a hostel ad-hoc, quick sightseeing while looking for accommodation
+    * very crowded even in the evening, European appearance
     * reconstructions around the main train station
     * multiple major streets and squares
     * opera house, neogothic church
@@ -134,7 +134,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
   * morning spent in multiple queues at Lviv main train station in order to
     learn that no train goes that day in our direction (booked)
   * closing a deal on offline Über to get us to the Polish borders for 60 €
-    * we attempted to haggle as the price is ~10 times the train ticket, in
+    * we attempted to haggle as the price was ~10 times the train ticket, in
       retrospect, it seems a fair taxi price for the distance
     * the third (and the last) encounter with the Ukrainian transport
   * spending the high noon roasting in the queue on the Polish customs check
@@ -146,7 +146,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 ## People
 
 * gypsy children in Berehovo -- very curious, fake waitress
-* cowherder -- talkative, even without knowing Czech
+* cowherd -- talkative, even without knowing Czech
 * girl in Mukachevo -- knew good English
 * security guy -- knew a bit of Czech, liked Czechs
 * Roman -- fixing bridges in Prague after floods, Czech-speaking grandfather,
