--- a/_posts/2019-08-17-galicia.md
+++ b/_posts/2019-08-17-galicia.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Galicia and Ruthenia
-tags: travel Hungary Ukraine Poland cycling mountains cows
+tags: travel Hungary Ukraine Poland cycling mountains cows Kraków
 ---
 
 ## Diary
@@ -41,14 +41,15 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 
   * **daily stats:** 57 km
   * **sleeping:** meadow between Rososh and Keretsky, tent
-  * learning from our hosts about non-drinking water from the tap (after we
+  * learning from our hosts that the tap water is not drinkable (after we had
     drank proper amount the evening before)
   * [Mukachevo](https://en.wikipedia.org/wiki/Mukachevo)
-    * Anglophone girl, almost Czechophone security guy
     * there were more women than men in the streets around noon
+    * lunch in the poshest restaurant in the city
   * afternoon kvass at Shenborniv castle (Шенборнів) with nice surroundings
-  * (women) monastery near Svalyava (Кирило-Мефодіївський монастир)
-  * riding through villages triggers curiosity among the locals, we obtained water
+  * (women) monastery near Svalyava (Кирило-Мефодіївський монастир), renewed
+    road around the monastery
+  * riding through villages triggers curiosity among the locals; we obtained water
     even when house owners did not understand us, [their consent was
     unclear](https://en.wikipedia.org/wiki/List_of_films_featuring_home_invasions)
   * cumulative plan completion: 72%
@@ -75,7 +76,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
     * as Czech as expected (Četnická stanice pub full of Czechs, Czech
       filmmakers shooting [another
       remake](https://en.wikipedia.org/wiki/Balada_pro_banditu))
-    * partying in Kolochava is hard due to no/dim street lighting
+    * partying in Kolochava is hard due to no/dim street light
   * cumulative plan completion: 68%
 
 {:.thumbnail}
@@ -85,7 +86,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 
   * **daily stats:** 70 km
   * **sleeping:** hotel Leopoldsdorf, 8.3 EUR/person/night
-  * breakfast in mixed good shop in Kolochava (including coffee)
+  * breakfast in mixed goods shop in Kolochava (including coffee)
   * highlight of the trip
     * Kolochava + Nerovets under bald slopes of Carpathians mountains
     * valley of the Tereblia with forests around, paved road and clean air
@@ -114,12 +115,13 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
     * the first encounter with Ukrainian public transport
     * no train, no bus (for bikes)
     * in the end we take "marshrutka", 200 UAH/3 persons + bikes
-  * unclear plan, so hasty decision to travel to Lviv (Львів) by train
+  * unclear plan, so we made hasty decision to travel to Lviv (Львів) by train
     * quick lunch in hipster burger-ama
-    * the second encounter with Ukrainian public transport (almost were not allowed
-      to board with the bikes)
-  * troubles finding a hostel ad-hoc, quick sightseeing while looking for accommodation
-    * very crowded even in the evening, European appearance
+    * the second encounter with Ukrainian public transport (we were almost not
+      allowed to board with the bikes)
+  * troubles finding a hostel ad-hoc, quick sightseeing while looking for the
+    accommodation
+    * streets are very crowded even in the evening, European appearance
     * reconstructions around the main train station
     * multiple major streets and squares
     * opera house, neogothic church
@@ -128,11 +130,12 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 ### Day 07 (2019-08-17)
 
   * **daily stats:** 12 km, ~80 km by bootleg marshrutka, ~750 km by train
+    * total cycling: 404 km
   * **sleeping:** EN 407 Chopin, ~1700 CZK/person/night
-  * our return plans collapse as we learn that LE connection does not accept
+  * our return plans collapsed as we learnt that LE connection did not accept
     bicycles
   * morning spent in multiple queues at Lviv main train station in order to
-    learn that no train goes that day in our direction (booked)
+    learn that no train went that day in our direction (booked)
   * closing a deal on offline Über to get us to the Polish borders for 60 €
     * we attempted to haggle as the price was ~10 times the train ticket, in
       retrospect, it seems a fair taxi price for the distance
@@ -145,18 +148,18 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 
 ## People
 
-* gypsy children in Berehovo -- very curious, fake waitress
+* gipsy children in Berehovo -- very curious, fake waitress
 * cowherd -- talkative, even without knowing Czech
 * girl in Mukachevo -- knew good English
-* security guy -- knew a bit of Czech, liked Czechs
+* security guy -- knew a bit of Czech, liked Czechs, helpful
 * Roman -- fixing bridges in Prague after floods, Czech-speaking grandfather,
   does not like Russians, small house with a goat under mountains now
 * anonymous boy -- ~13 years old buys cigarettes and rides a motorbike (not
-  that unusual in the region)
+  that unusual in the village region)
 * Bogdan -- yuppie from Chernovitsi, helped us in the train and Lviv,
   enlightened
 * Poles ([2 guys, 1 girl]({%post_url 2018-12-05-tenerife %}#people)) --
-  returning from bikepacking trip from Warszava to Istanbul
+  returning from a bikepacking trip from Warszava to Istanbul
 
 ## Misc
 
@@ -176,6 +179,7 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 * data SIM cards are unbelievably cheap
 * decentralized settlements, self-reliant houses/villages
 * great wealth differences (even neighboring houses)
+* Slav squat is real
 
 {:.thumbnail}
 [![Unregulated banks of the river Rika](/resources/2019-galicia/river-rika.jpg)](/resources/2019-galicia/river-rika.jpg)
@@ -191,10 +195,10 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 
 ## Lessons learnt
 
-* fenders are not worth it (hinder manipulation, bike blocks splash anyway)
+* fenders are not worth it (hinder manipulation, bike blocks splashes anyway)
 * packing all above rear wheel is suboptimal (greater moments to carry the
   bike, overload of rear wheel/axis)
-* too many bags/luggage deteriorate leaving a bike alone
+* too many bags/luggage complicate leaving a bike alone
 * little backpack is useful
 * (the points above apply to lazy cyclists who do lot of for city tourism and
   frequent public transport travels)
@@ -202,5 +206,5 @@ tags: travel Hungary Ukraine Poland cycling mountains cows
 * no need to take both "membrane" and PVC raincoat (the former proved well)
 * sandals almost unused (cyclic shoes stunk though)
 
-*Warm thanks to T for the photos.*
+*Grateful thanks to T for the photos.*
 
