--- a/_posts/2018-10-01-tpodg.md
+++ b/_posts/2018-10-01-tpodg.md
@@ -1,20 +1,23 @@
 ---
 layout: post
 title: The Picture of Dorian Gray (book)
-tags: book England society art personality
+tags: book England society art personality incomplete
 ---
 
 Reading period: Jul--Sep 2018.
 
+This entry is published in incomplete state.
+
 ## Plot
 
+Missing.
 
 
 ## Topics
 
-* https://www.artsy.net/news/artsy-editorial-artwork-banksy-shredded-selling-13-million-sothebys
 
 * random quotable wisdoms (mostly uttered by Dorian Gray):
+
 > "There is no such thing as a moral or an immoral book. Books are well
 > written, or badly written."
  
@@ -22,19 +25,23 @@ Reading period: Jul--Sep 2018.
 > that is not being talked about."
 
 *  with some it's not clear whether they are genuine or passed along
+
 > "Nowadays people know the price of everything and the value of nothing."
 
 * on social graph building
+
 > "I choose my friends for their good looks, my acquaintances for their good
 > characters, and my enemies for their good intellects."
 
 * information over matter
   * visionary or social constants?
+
 > "The thoroughly well-informed man--that is the modern ideal."
 
 > "can stand brute force, but brute reason is quite unbearable."
 
 * matter over intellect
+
 > Mysticism, with its marvellous power of making common things strange to us,
 > and the subtle antinomianism that always seems to accompany it, moved him for
 > a season; and for a season he inclined to the materialistic doctrines of the
@@ -44,11 +51,14 @@ Reading period: Jul--Sep 2018.
 > the spirit on certain physical conditions, morbid or healthy, normal or
 > diseased.
 
-  * misogyny/trolling?
+* misogyny/trolling?
+
 > "[...]no woman is a genius. Women are a decorative sex. They never have
 > anything to say, but they say it charmingly. Women represent the triumph of
 > matter over mind, just as men represent the triumph of mind over morals."
-  * also (has any women read the book?)
+
+* also (has any women read the book?)
+
 > Women, as some witty Frenchman once put it, inspire us with the desire to do
 > masterpieces and always prevent us from carrying them out.
 
@@ -59,6 +69,7 @@ Reading period: Jul--Sep 2018.
 > all the same. They love being dominated.
 
 * evolution of human relationships
+
 > "When one is in love, one always begins by deceiving one's self, and one
 > always ends by deceiving others."
 
@@ -72,6 +83,7 @@ Reading period: Jul--Sep 2018.
 > She is very clever, too clever for a woman. [on Lady Monmouth]
 
 * perceiving relationships and self
+
 > When we blame ourselves, we feel that no one else has a right to blame us. It
 > is the confession, not the priest, that gives us absolution. When Dorian had
 > finished the letter, he felt that he had been forgiven.
@@ -81,10 +93,12 @@ Reading period: Jul--Sep 2018.
 > to enjoy them, and to dominate them.
 
 * I like this
+
 > To become the spectator of one's own life, as Harry says, is to escape the
 > suffering of life.
 
 * "work-life" balance
+
 > "Good artists exist simply in what they make, and consequently are perfectly
 > uninteresting in what they are. A great poet, a really great poet, is the
 > most unpoetical of all creatures."
@@ -96,7 +110,8 @@ Reading period: Jul--Sep 2018.
 > I trust he is one of the aristocracy. He has all the appearance of it, I must
 > say. It might be a most brilliant marriage for Sibyl.
 
-  * from Lord Henry
+* from Lord Henry
+
 > I admit that I think that it is better to be beautiful than to be good. But
 > on the other hand, no one is more ready than I am to acknowledge that it is
 > better to be good than to be ugly."
@@ -118,6 +133,7 @@ ugly -------- beautiful
 
 * the miraculous painting
   * the first encounter
+
 > the dim arrested light that struggled through the cream-coloured silk blinds,
 > the face appeared to him to be a little changed. The expression looked
 > different. One would have said that there was a touch of cruelty in the
@@ -139,6 +155,7 @@ ugly -------- beautiful
 > "You told me you had destroyed it." "I was wrong. It has destroyed me."
 
 * epistemology
+
 > What was the use of knowing? If the thing was true, it was terrible. If it
 > was not true, why trouble about it?
 
@@ -146,20 +163,27 @@ ugly -------- beautiful
 > fatal. It is the uncertainty that charms one. A mist makes things wonderful."
 
 * on catholics
+
 > [...] stirred him as much by its superb rejection of the evidence of the
 > senses as by the primitive simplicity of its elements and the eternal pathos
 > of the human tragedy that it sought to symbolize.
 
 * contrast with today
+
 > Society--civilized society, at least-- is never very ready to believe
 > anything to the detriment of those who are both rich and fascinating.
 
 * on countryside
+
 > They get up early, because they have so much to do, and go to bed early,
 > because they have so little to think about.
 
 > anybody can be good in the country. There are no temptations there. That is
 > the reason why people who live out of town are so absolutely uncivilized.
+
+* when does it take place -- in London and in the nineteenth century
+
+* [if it was today the painting price would raise](https://www.artsy.net/news/artsy-editorial-artwork-banksy-shredded-selling-13-million-sothebys)
 
 ## Characters
 
@@ -176,15 +200,18 @@ ugly -------- beautiful
 > what is improbable.
 
 * processing mail (cf spam)
+
 > The others he opened listlessly. They contained the usual collection of
 > cards, invitations to dinner, tickets for private views, programmes of
 > charity concerts, and the like that are showered on fashionable young men
 > every morning during the season.
 
 * and 38 starts at 17 yo, continues at 25 and 38
+
 > I shall be of age in less than a year, and then I can do what I like.
 
 * psychopath
+
 > Dorian looked at Campbell. "How long will your experiment take, Alan?" he
 > said in a calm indifferent voice. The presence of a third person in the room
 > seemed to give him extraordinary courage.
@@ -196,6 +223,7 @@ ugly -------- beautiful
 * killed by DG
 
 ### Lord Herry Henry
+
 > "It was clear to him that the experimental method was the only method by
 > which one could arrive at any scientific analysis of the passions; and
 > certainly Dorian Gray was a subject made to his hand, and seemed to promise
@@ -219,6 +247,7 @@ ugly -------- beautiful
 ### Sibyl Vane
   * actress
   * naïve (16 yo)
+
 > "what does money matter? Love is more than money."
 
 ### James Vane (brother)
@@ -226,7 +255,9 @@ ugly -------- beautiful
 
 ### Alan Campbell
 * chemist, solves problems
+
 > His dominant intellectual passion was for science.
+
 * dissolves the corpse in nitric acid
 * blackmailed
 * commits suicide eventually
@@ -244,6 +275,7 @@ ugly -------- beautiful
 
 * **some** for singular? "as if awakened from some dream."
 * indirect enumeration, requiring cultural knowledge
+
 > "One evening she is Rosalind, and the next evening she is Imogen. I have seen
 > her die in the gloom of an Italian tomb, sucking the poison from her lover's
 > lips. I have watched her wandering through the forest of Arden, disguised as
@@ -257,9 +289,6 @@ ugly -------- beautiful
 > some starlit mill-pond, with lovely water-lilies round her, like Ophelia?"
 
 
-TODO when does it take place
-> in London and in the nineteenth century. I
 
-> am off to Paris by the midnight train, and I particularly wanted to see you before I left.
+> I am off to Paris by the midnight train, and I particularly wanted to see you before I left.
 
-TODO unify quote signs
