--- a/_posts/2019-03-31-mallorca.md
+++ b/_posts/2019-03-31-mallorca.md
@@ -195,7 +195,8 @@ tags: Spain Mallorca cycling island travel
   * account for low-cost airline delays, 
   * train delays, buffer for transfers
   * Wien Hauptbahnhof is closed between 1:30 and 4:00 (and no trains in that window)
-  * trip joy depends on number of participants
+  * trip joy depends on number of participants (I's remark: *the dependency is
+    function of time (duration) too*)
 
 [![Dependency of joy on number of participants of a trip](/resources/2019-group-joy.png)](/resources/2019-group-joy.png)
 
