--- a/_posts/2020-02-22-droneman.md
+++ b/_posts/2020-02-22-droneman.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Droneman (movie)
-tags: culture movie 
+tags: culture movie
 ---
 
 **Warning: Stop reading if you haven't seen the movie yet! Really, you should
@@ -77,10 +77,10 @@ In the end, he attempts assasination of a related politician.
     * Ztohoven
     * [Slovak hitmen](https://en.wikipedia.org/wiki/Murder_of_J%C3%A1n_Kuciak)
   * crowdfunded assasination of president
-  * voting by money
-  * ineffectiveness of security checks
+  * voting by spending money
+  * ineffectiveness of security checks (interpreters)
   * some Russian poet/singer
-  * effective altruism -- the biggest help by sending money
+  * effective altruism -- the biggest help is sending money to specialized party
   * women without children
 
 ## Other
