--- a/_posts/2020-02-22-droneman.md
+++ b/_posts/2020-02-22-droneman.md
@@ -90,3 +90,12 @@ In the end, he attempts assasination of a related politician.
   * exteriors
     * Karlín, Žižkov, Holešovice and Malá Strana
     * also an Israeli street
+
+## Comment
+
+I'm used to multiple parallel plot lines in the work of Zelenka.
+Droneman was relatively simple in terms of the plot (classic composition),
+however, it was more difficult to untangle the characters, what is their
+motivation, what is their purpose.
+Some story elements were based on real events/persons and composed into a
+coherent story, which is what I like in and I expect from Zelenka movies.
