Some physics fixups

--- a/_posts/2017-04-13-villani.md
+++ b/_posts/2017-04-13-villani.md
@@ -38,7 +38,7 @@ tags: maths lecture culture
   - the Law of Errors
 - Adolphe Quetelet -- popularized law of random causes
 - Francis Galton (if Greeks had known that law, they'd have personified it)
-- Claude Channon
+- Claude Shannon
   - draft: information or uncertainty
   - rework by von Neumann: entropy
 - entropy
