--- a/_posts/2020-03-09-anc.md
+++ b/_posts/2020-03-09-anc.md
@@ -4,8 +4,8 @@ title: Active noise cancelling
 tags: acoustics music physics
 ---
 
-<script src="https://unpkg.com/d3@3/d3.min.js"></script>
-<script src="https://unpkg.com/function-plot@1/dist/function-plot.js"></script>
+<script async src="https://unpkg.com/d3@3/d3.min.js"></script>
+<script async src="https://unpkg.com/function-plot@1/dist/function-plot.js"></script>
 
 Let's start with a simple one-dimensional (or also a plane wave) harmonic wave
 that has source at origin of coordinates.
