--- a/_posts/2015-12-28-phd.md
+++ b/_posts/2015-12-28-phd.md
@@ -12,7 +12,7 @@ facts that I mention after the decision section.
 At the beginning, I observed the following two categories of PhD students (this
 applies mostly to computer science):
 
-  * They are either aces (both programmers/coders and their govern their
+  * They are either aces (both programmers/coders and they govern their
     particular field of interest),
   * or they are not prepared for the "real life" and want to prolong their
     student years.
@@ -24,7 +24,7 @@ Below follow some arguments and aspects of PhD studies.
 ### PhD opens you new opportunities
 
 This is certainly true if you want to pursue your career in (computer) science.
-For the industry, it depends rather on you willingness and interests.
+For the industry, it depends rather on your willingness and interests.
 All in all, I've met people who work on pretty cool stuff too and they don't
 have a PhD degree at all.
 
@@ -45,13 +45,13 @@ point).
 
 One could argue that with higher qualification your expected salary would be
 higher.
-That is true. However, don't forget that also when you are not studying you are
-gaining experience which is also valued by the job market.
+That is true. However, don't forget that also when you are not studying, you are
+gaining experience which is valued by the job market too.
 
 I don't think it's a drawback (e.g. wasted time), however, when you are too
-specialized you won't do what you studied (if you are not very lucky).
+specialized, you won't do what you studied (if you are not very lucky).
 
-### PhD studies thickens you social network
+### PhD studies thicken you social network
 
 That's true, you get to know other people in your field of interest.
 I'm too stubborn to accept the effect of this, though.
