--- a/_posts/2017-08-03-bulgaria.md
+++ b/_posts/2017-08-03-bulgaria.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Vacation above 2000 meters
-tags: travel Bulgaria Serbia Hungary mountains
+tags: travel Bulgaria Serbia Hungary mountains cows
 ---
 
 ## Diary
