Memset post argument about ABI

--- a/_posts/2015-05-07-memset.md
+++ b/_posts/2015-05-07-memset.md
@@ -13,6 +13,7 @@ tags: programming
     * memberwise
       * explicitly indicates what we are doing with the structure
       * prone to leaving out some members -> hard to hunt non-deterministic bugs
+      * not robust against ABI changes
     * conclusion:
       * <del>**Prefer memset.**</del>
       * **[Use calloc.][1]**
