first aid: smartphone

--- a/_posts/2020-01-16-first-aid.md
+++ b/_posts/2020-01-16-first-aid.md
@@ -33,8 +33,10 @@ Most probable troubles:
 
 
 ## Remote help
+
   * call 155 in the Czech Republic (directly)
   * call 112 in other European countries (don't call this in CR, it's one more hop)
+  * tip: install a smartphone app as an assistant in case of no signal or a guide
 
 
 ## Injuries (TODO)
