r1b: fix English, SPoF updates

--- a/_posts/2016-01-12-r1b-problem.md
+++ b/_posts/2016-01-12-r1b-problem.md
@@ -21,10 +21,11 @@ bottleneck.
 ## <a name="books"/> Books to read first
 
 
-You will find some inspiration at the religions which hold great market share
-for centuries. It is certainly worth reading the Old Testament, which was later
+You will find some inspiration in the religions that have been holding great
+market share for centuries.
+It is certainly worth reading the Old Testament, which was later
 expanded with the New Testament. You may also find a rework of the same ideas
-the Quran which was published few political implementations later.
+in the Quran which was published few political implementations later.
 If you are interested in low-level foundations, check some books from [this
 list][2].
 
@@ -48,10 +49,10 @@ these rules. Here you can exploit various [superficial][5] [stimuli][6].
 ## Fuse against erosion
 
 Typically you deploy the religion via oral tradition or prophets.
-For it to last long enough to collect the one billion believers, you need to
+In order to last long enough to collect the one billion believers, you need to
 design fuses against erosion.
 Quite reliable is the declaration of the [last prophet][7], beware that this
-method is applicable when you have final version of the religion ready. 
+method is applicable only when you have the final version of the religion ready.
 It's difficult to introduce new patches afterwards.
 You may find the [inquisition][8] a more comfy way of control after deployment.
 
@@ -72,6 +73,7 @@ can protest against it.
 Avoid any [single points of failure][10] and be sure you make everything as
 distributed as possible (see, the omnipresent god is a useful idea).
 Making a single random [place super-holy][11], doesn't really scale well.
+Also beware of [split-brain][12] or [partitioning][13].
 
 [4]: https://en.wikipedia.org/wiki/Reinforcement_learning
 [5]: https://en.wikipedia.org/wiki/Afterlife
@@ -81,4 +83,5 @@ Making a single random [place super-holy][11], doesn't really scale well.
 [9]: https://en.wikipedia.org/wiki/Communism
 [10]: https://en.wikipedia.org/wiki/Pope
 [11]: https://en.wikipedia.org/wiki/Mecca
-
+[12]: https://en.wikipedia.org/wiki/Western_Schism
+[13]: https://en.wikipedia.org/wiki/Islamic_schools_and_branches
