millionaire: Finalize beta

--- a/_posts/2022-01-23-ymp.md
+++ b/_posts/2022-01-23-ymp.md
@@ -1,11 +1,26 @@
 ---
 layout: post
-title: YMP
-tags: cryptography
+title: Yao's Millionaires' problem calculator
+tags: cryptography programming javascript
+hidden: true
 ---
 <link rel="stylesheet" href="/resources/2022-ymp/style.css"/>
 
-See also https://blog.goodaudience.com/understanding-zero-knowledge-proofs-through-simple-examples-df673f796d99
+## Instructions
+
+1. Alice and Bob agrees on common domain and communication channel
+1. Alice sends *challenge* to Bob
+1. Bob sends *response* to Alice
+1. Alice sends *acknowledgement* to Bob
+1. Bob shares result with Alice
+
+Red input fields are for values provided by Alice.
+Blue input fields are for values provided by Bob.
+This page serves only to generate and process the messages, it doesn't send
+anything (it can work offline).
+The messages cannot restore more than comparison result.
+
+**Use at your own risk.**
 
 ## Domain
 
@@ -318,7 +333,6 @@ document.addEventListener('DOMContentLoaded', () => {
 
 });
 
-// TODO quick explanation text, ideal functionality picture
 // TODO refactor ymp internals to bytes
 
 // DONE
@@ -329,6 +343,7 @@ document.addEventListener('DOMContentLoaded', () => {
 // DONE secret input validation
 // DONE error (message) handling
 // CANC RO fields copy-paste on click? -> permissions unclear
-// TODO CSS delineation
+// DONE CSS delineation
+// DONE quick explanation text, ideal functionality picture
 </script>
 
