millionaire: Make setupDomain idempotent
Old version added multiple event handlers to elements.

--- a/_posts/2022-01-23-ymp.md
+++ b/_posts/2022-01-23-ymp.md
@@ -160,7 +160,7 @@ function buttonUnlocker(elField, elButton) {
 	elField.addEventListener("keyup", handler);
 }
 
-function setupAlice(domain) {
+function setupAlice(ctx) {
 	let elSecret = document.getElementById("a_secret");
 	let elPrepare = document.getElementById("a_prepare");
 	let elReset = document.getElementById("a_reset");
@@ -196,7 +196,7 @@ function setupAlice(domain) {
 	elPrepare.addEventListener("click", e => {
 		if (elSecret.value === "")
 			return;
-		alice = new window.Alice(domain, Number(elSecret.value));
+		alice = new window.Alice(ctx.domain, Number(elSecret.value));
 		let ch = alice.produceChallenge();
 
 		elPrepare.disabled = true;
@@ -222,7 +222,7 @@ function setupAlice(domain) {
 }
 
 
-function setupBob(domain) {
+function setupBob(ctx) {
 	let elSecret = document.getElementById("b_secret");
 	let elPrepare = document.getElementById("b_prepare");
 	let elReset = document.getElementById("b_reset");
@@ -264,7 +264,7 @@ function setupBob(domain) {
 	elPrepare.addEventListener("click", e => {
 		if (elSecret.value === "")
 			return;
-		bob = new window.Bob(domain, Number(elSecret.value));
+		bob = new window.Bob(ctx.domain, Number(elSecret.value));
 
 		elPrepare.disabled = true;
 		elSecret.disabled = true;
@@ -304,6 +304,7 @@ function setupBob(domain) {
 document.addEventListener('DOMContentLoaded', () => {
 	test();
 
+	let ctx = {}
 	// ------
 	function setupDomain(e) {
 		let elMin = document.getElementById("dom_min");
@@ -312,7 +313,7 @@ document.addEventListener('DOMContentLoaded', () => {
 		let elASecret = document.getElementById("a_secret");
 		let elBSecret = document.getElementById("b_secret");
 
-		let domain = new window.Domain(
+		ctx.domain = new window.Domain(
 					       Number(elMin.value),
 					       Number(elMax.value),
 					       Number(elStep.value)
@@ -325,10 +326,10 @@ document.addEventListener('DOMContentLoaded', () => {
 		elBSecret.max = elMax.value;
 		elBSecret.step = elStep.value;
 
-		setupAlice(domain);
-		setupBob(domain);
 	};
 	setupDomain();
+	setupAlice(ctx);
+	setupBob(ctx);
 	document.getElementById("dom_setup").addEventListener("click", setupDomain);
 
 });
